fix: home-login page scrollbar by adding loginpage body class

--- a/bgf-uygulamasi1/src/LoginPage/LoginPage.css
+++ b/bgf-uygulamasi1/src/LoginPage/LoginPage.css
@@ -1,5 +1,11 @@
-body{
+body.no-scroll {
+  overflow: hidden;
+}
+
+
+body, html{
     background-color: #1c1f4b;
+  
 }
 
 
